--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "json-server": "^0.17.3",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0",
-    "server": "^1.0.38"
+    "server": "^1.0.38",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
